# copypaste

./: .dockerignore  .gitignore  2026-07-05-130912-foo.txt  CLAUDE.md  CONTEXT.md  Dockerfile  Features.md  README.md  TASKS.md  additional_transcript_01.txt  docker-compose.yml  pyproject.toml
.claude/: export-before-compact.py
.claude/agents/: qa-tester.md
.claude/commands/: explain_term.md  review-fix-loop.md
.playwright-mcp/: page-2026-07-05T11-20-28-169Z.yml  page-2026-07-05T11-20-57-623Z.yml  page-2026-07-05T11-51-52-445Z.yml  page-2026-07-05T11-52-21-474Z.yml  page-2026-07-05T11-52-34-766Z.yml  page-2026-07-05T11-53-54-663Z.yml  page-2026-07-05T11-54-05-176Z.yml  page-2026-07-05T11-54-18-726Z.yml  page-2026-07-05T12-15-13-438Z.yml  page-2026-07-05T12-15-42-676Z.yml  page-2026-07-05T12-15-55-435Z.yml  page-2026-07-05T12-16-26-422Z.yml  page-2026-07-05T12-19-43-337Z.yml  page-2026-07-05T12-19-47-659Z.yml  page-2026-07-05T12-20-02-363Z.yml  page-2026-07-05T13-27-22-699Z.yml  page-2026-07-05T13-28-53-969Z.yml  page-2026-07-05T13-35-20-239Z.yml  page-2026-07-05T13-49-27-371Z.yml  page-2026-07-05T13-49-36-840Z.yml  page-2026-07-05T13-51-45-296Z.yml  page-2026-07-05T13-51-52-702Z.yml  page-2026-07-05T13-52-40-836Z.yml  page-2026-07-05T13-57-25-012Z.yml  page-2026-07-05T13-57-32-256Z.yml  page-2026-07-05T14-04-57-733Z.yml  page-2026-07-05T14-05-01-450Z.yml
cdk/: app.py  cdk.context.json  pyproject.toml
cdk/stacks/: compute_stack.py  data_stack.py  edge_stack.py  network_stack.py  waf_stack.py
docs/adr/: ADR-001-random-short-id.md  ADR-002-dynamodb-datastore.md  (+5 more)
(+20 files in other folders)
