[project]
name = "copypaste"
version = "0.1.0"
description = "Add your description here"
authors = [
    { email = "sh.yosef@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.40",
    "flask>=3.1.3",
    "flask-wtf>=1.3.0",
    "gunicorn>=26.0.0",
    "jinja2-fragments>=1.12.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "moto[dynamodb]>=5.2.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
